# ansible_base_setup

./: .gitignore  ansible.cfg  goo.sh  play.sh  pylock.toml  pyproject.toml  readme.md  requirements.txt  vds-init.sh
core/plays/: play.yml.tmpl  vds-init.yml.tmpl
core/roles/admin/defaults/: _main.yml
core/roles/admin/meta/: main.yml
core/roles/admin/tasks/: main.yml
core/roles/base/defaults/: main.yml
core/roles/base/tasks/: copy_files.yml  logrotate.yml  main.yml  services.yml  timezone.yml
core/roles/init-variables/: main.yml
core/roles/init-variables/tasks/: main.yml
core/roles/main/handlers/: main.yml
core/roles/ping/: main.yml  tasks.yml
core/roles/sshd/defaults/: main.yml
core/roles/sshd/tasks/: main.yml
core/roles/sshd/templates/etc/ssh/: sshd_config
core/roles/sudo/tasks/: main.yml  main_task.yml
core/roles/sudo/templates/etc/: sudoers.vds
core/roles/vds-init/defaults/: main.yml
core/roles/vds-init/handlers/: main.yml
core/roles/vds-init/tasks/: main.yml
docs/: commands  todo.md
